--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,8 @@ PORT=5000
 
 # Database
 MONGO_URI=mongodb://localhost:27017/fashion_shop
-# Hoặc MongoDB Atlas: mongodb+srv://username:password@cluster.mongodb.net/fashion_shop
+# MongoDB Atlas example:
+# MONGO_URI=mongodb+srv://username:password@cluster.mongodb.net/fashion_shop
 
 # JWT Configuration
 JWT_SECRET=your_super_secret_jwt_key_minimum_32_characters_long_random_string
@@ -11,19 +12,25 @@ JWT_EXPIRE=24h
 JWT_REFRESH_SECRET=your_super_secret_refresh_token_key_minimum_32_characters
 JWT_REFRESH_EXPIRE=7d
 
-# Cloudinary Configuration (Đăng ký tại https://cloudinary.com)
+# Cloudinary Configuration (https://cloudinary.com)
 CLOUDINARY_CLOUD_NAME=your_cloud_name
 CLOUDINARY_API_KEY=your_api_key
 CLOUDINARY_API_SECRET=your_api_secret
 
-# Email Configuration (Optional - Nodemailer)
+# Email Configuration (Nodemailer)
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
-EMAIL_USER=your_email@gmail.com
-EMAIL_PASSWORD=your_app_password
+EMAIL_SECURE=false
+EMAIL_USER=nguyentantuonghuy@gmail.com
+# IMPORTANT: Use Gmail App Password (NOT your normal Gmail password)
+EMAIL_PASSWORD=
+EMAIL_FROM="Fashion Shop <nguyentantuonghuy@gmail.com>"
 
 # Client URL (Frontend)
 CLIENT_URL=http://localhost:3000
+
+# Reset password
+RESET_PASSWORD_EXPIRE_MINUTES=15
 
 # Rate Limiting
 RATE_LIMIT_WINDOW_MS=900000
